Updated ARIA roles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <main>
+    <main role="main">
       <div class="container">
         <img src="./images/image-qr-code.png" alt="QR code" />
         <h1>Improve your front-end skills by building projects</h1>
@@ -34,7 +34,7 @@
       </div>
     </main>
 
-    <footer class="attribution">
+    <footer role="contentinfo" class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
